name:               abacate
version:            0.0.0.2
cabal-version:      >=1.8
build-type:         Simple
license:            OtherLicense
license-file:       LICENSE
copyright:          2012 Marco Túlio Pimenta Gontijo <marcotmarcot@gmail.com>
author:             Marco Túlio Pimenta Gontijo <marcotmarcot@gmail.com>
maintainer:         Marco Túlio Pimenta Gontijo <marcotmarcot@gmail.com>
stability:          experimental
homepage:           http://github.com/marcotmarcot/abacate
bug-reports:        http://github.com/marcotmarcot/abacate/issues
synopsis:           Parser for a language similar to Cucumber's Gherkin
description:
  Gherkin is the language used by the Cucumber system for Behaviour Driven
  Development.  This package contains a parser to it, based on its BNF with
  minor changes.  For more information on Cucumber, check <http://cukes.info>.

category:           Language
extra-source-files:
  tests/data/calculator.feature
  tests/data/complete.feature
  tests/data/environment.feature
  tests/data/givenWhenGivenWhen.feature
  tests/data/wrongComment.feature

library
  exposed-modules:
    Language.Abacate
    Language.Abacate.Types

  other-modules:   Language.Abacate.BNF
  build-depends:
      base    >=4    && <5
    , parsec  >=3.1  && <3.2
    , text    >=0.11 && <2.3

  ghc-options:     -Wall

test-suite abacate-test
  type:           exitcode-stdio-1.0
  main-is:        abacate.hs
  hs-source-dirs: tests
  build-depends:
      abacate
    , base
    , HUnit
    , text

  ghc-options:    -Wall
